fix #18: alignment, margin and padding

--- a/src/style.scss
+++ b/src/style.scss
@@ -101,3 +101,6 @@ div.atv-front {
 	margin: auto;
 }
 
+div.atv-iframe {
+	pointer-events: none;
+}
